# RC-CAR

./: .gitignore  CMakeLists.txt  README.txt  sdkconfig  sdkconfig.defaults
components/comm_wifi/: CMakeLists.txt  Kconfig  comm_wifi.c
components/comm_wifi/include/: comm_wifi.h
components/rc_sensor_init/: rc_sensor_init.c
components/rc_sensor_init/include/: rc_sensor_init.h
main/: CMakeLists.txt  app_main.c  rc_car_app.c  rc_car_app.h  rc_car_camera.c  rc_car_camera.h  rc_car_config.h  rc_car_motor.c  rc_car_motor.h
